- Updated Campus Detail block to align Campus Schedules and Topic Columns, and fix table header padding.

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -482,7 +482,7 @@ textarea,
 
     // Remove padding offset on center
     &[align="center"] {
-      padding: 18px 6px;
+      padding: @table-padding-vertical 6px;
     }
   }
 
